# fitness_assistant

./: .gitignore  DEPLOYMENT.md  README.md
Backend/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml
Backend/alembic/: env.py
Backend/alembic/versions/: 20251130_1735_360e4ad4e3c6_initial_database_setup.py  20251206_0319_f051ea17fb4c_fix_user_measurement_user_id_type.py  20251215_0136_8528d6796c8e_add_new_table_for_exercises.py
Backend/fitness_assistant/: config.py  main.py
Backend/fitness_assistant/db/: __init__.py  session.py
Backend/fitness_assistant/db/test_sql_data/: add_stats_demo_data.sql  check_stats_data.sql  demo_data.sql  fill_exercises_en.sql
Backend/fitness_assistant/entities/: __init__.py  analysis.py  exercise.py  media.py  user.py
Backend/fitness_assistant/enums/: analysis_enums.py  exercise_enums.py  jwt_types.py  media_enums.py  user_enums.py
Backend/fitness_assistant/exceptions/: __init__.py  auth_exceptions.py  jwt_exceptions.py
Backend/fitness_assistant/models/: __init__.py  analysis.py  exercise.py  media.py  session.py  user.py  workout_plan.py
Backend/fitness_assistant/repositories/: __init__.py  analysis_repo.py  exercise_repo.py  media_repo.py  session_repo.py  stats_repo.py  user_repo.py  workout_plan_repo.py
Backend/fitness_assistant/schemas/: __init__.py  analysis.py  auth.py  base.py  exercise.py  media.py  session.py  stats.py  user.py  workout_plan.py
Backend/fitness_assistant/services/: __init__.py  analysis_service.py  auth_service.py  exercise_service.py  media_service.py  session_service.py  stats_service.py  user_service.py  workout_plan_service.py
Backend/fitness_assistant/utils/: security.py
Backend/fitness_assistant/web/: deps.py
Backend/fitness_assistant/web/routers/: __init__.py  analysis.py  auth.py  exercises.py  media.py  sessions.py  stats.py  users.py  workout_plans.py
Backend/tests/: conftest.py
Backend/tests/services/: test_auth_service.py
Backend/tests/utils/: test_security.py
DB/: fitness_backup.sql
IOS/fitness_assistant/: ContentView.swift  fitness_assistantApp.swift
IOS/fitness_assistant.xcodeproj/: project.pbxproj
IOS/fitness_assistant/Models/: AnalysisModel.swift  AuthModel.swift  ExerciseCategory.swift  ExercisePreviewModel.swift  MediaModel.swift  OnboardingModel.swift  ProfileModel.swift  ProfileViewModel.swift  User.swift  UserModel.swift  WorkoutModel.swift
IOS/fitness_assistant/Services/: AchievementService.swift  AnalysisService.swift  AuthService.swift  DashboardService.swift  InfoServices.swift  KeychainService.swift  MeasurementService.swift  MediaService.swift  NetworkService.swift  (+4 more)
IOS/fitness_assistantTests/: fitness_assistantTests.swift
IOS/fitness_assistantUITests/: fitness_assistantUITestsLaunchTests.swift
fitness_assistant/fitness_assistant/: fitness_assistantApp.swift
fitness_assistant/fitness_assistantUITests/: fitness_assistantUITests.swift
fitness_assistant_IOS/fitness_assistant_IOS.xcodeproj/: project.pbxproj
(+51 files in other folders)
